beautified nav, removed spacing gaps, fixed tags used in endscreen

--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -1,20 +1,6 @@
-/* nav section
 nav {
-  display: flex;
-  flex-direction: horizontal;
-  margin-top: 1rem;
-  font-family: Helvetica, Arial, sans-serif;
+  border-bottom: 2px solid #4285F4;
 }
-nav > h3 {
-  flex: 1;
-}
-nav h3 a:hover {
-  text-decoration: none;
-}
-nav > ul {
-  flex: 1;
-}
-*/
 
 /* Media Queries */
 @media(max-width: 480px) {
@@ -23,11 +9,6 @@ nav > ul {
     align-items: center;
   }
 }
-/* @media(max-width: 992px) {
-  nav {
-    margin-bottom: 0rem;
-  }
-} */
 
 /* Utilities Styling */
 .googleBlue { color: #4285F4; }
